--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - .env
     volumes:
       - .:/app
-    working_dir: /app/backend-api  # Set working directory to backend-api
+    working_dir: /app/backend-api # Set working directory to backend-api
     command: python run.py
 
   celery-worker:
@@ -23,10 +23,10 @@ services:
       - .env
     volumes:
       - .:/app
-    working_dir: /app/backend-api  # Ensure Celery runs inside backend-api
+    working_dir: /app/backend-api # Ensure Celery runs inside backend-api
     environment:
-      - PYTHONPATH=/app/backend-api  # Add backend-api to PYTHONPATH
-    command: celery -A run.celery worker --loglevel=info
+      - PYTHONPATH=/app/backend-api # Add backend-api to PYTHONPATH
+    command: celery -A celery_app.celery worker --loglevel=info
     depends_on:
       - redis
       - web
@@ -37,10 +37,10 @@ services:
       - .env
     volumes:
       - .:/app
-    working_dir: /app/backend-api  # Ensure Celery runs inside backend-api
+    working_dir: /app/backend-api # Ensure Celery runs inside backend-api
     environment:
-      - PYTHONPATH=/app/backend-api  # Add backend-api to PYTHONPATH
-    command: celery -A run.celery beat --loglevel=info
+      - PYTHONPATH=/app/backend-api # Add backend-api to PYTHONPATH
+    command: celery -A celery_app.celery beat --loglevel=info
     depends_on:
       - redis
       - web
