--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,14 @@ services:
 
   web:
     build:
-      context: .
+      context: ./backend-api
       dockerfile: Dockerfile
     ports:
       - "5001:5000"
     env_file:
       - .env
     volumes:
-      - .:/app
+      - ./backend-api:/app
     working_dir: /app/backend-api # Set working directory to backend-api
     command: python run.py
 
@@ -22,7 +22,7 @@ services:
     env_file:
       - .env
     volumes:
-      - .:/app
+      - ./backend-api:/app
     working_dir: /app/backend-api # Ensure Celery runs inside backend-api
     environment:
       - PYTHONPATH=/app/backend-api # Add backend-api to PYTHONPATH
@@ -36,7 +36,7 @@ services:
     env_file:
       - .env
     volumes:
-      - .:/app
+      - ./backend-api:/app
     working_dir: /app/backend-api # Ensure Celery runs inside backend-api
     environment:
       - PYTHONPATH=/app/backend-api # Add backend-api to PYTHONPATH
