--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,18 +9,18 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "5001:5000"
+      - "5000:5000"
     env_file:
-      - .env
+      - backend-api/.env
     volumes:
       - .:/app
     working_dir: /app/backend-api # Set working directory to backend-api
-    command: python run.py
+    command: flask run
 
   celery-worker:
     build: .
     env_file:
-      - .env
+      - backend-api/.env
     volumes:
       - .:/app
     working_dir: /app/backend-api # Ensure Celery runs inside backend-api
@@ -34,7 +34,7 @@ services:
   celery-beat:
     build: .
     env_file:
-      - .env
+      - backend-api/.env
     volumes:
       - .:/app
     working_dir: /app/backend-api # Ensure Celery runs inside backend-api
