--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,9 @@ services:
     volumes:
       - .:/app
     working_dir: /app/backend-api # Set working directory to backend-api
-    command: flask run
+    command: flask run --host=0.0.0.0 --port=5000
+    depends_on:
+      - redis
 
   celery-worker:
     build: .
