--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,28 +3,32 @@ services:
     image: redis
     ports:
       - "6379:6379"
+    networks:
+      - backend_network
 
   web:
     build:
-      context: ./backend-api
+      context: .
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
     env_file:
       - backend-api/.env
     volumes:
-      - ./backend-api:/app
+      - .:/app
     working_dir: /app/backend-api # Set working directory to backend-api
     command: flask run --host=0.0.0.0 --port=5000
     depends_on:
       - redis
+    networks:
+      - backend_network
 
   celery-worker:
     build: .
     env_file:
       - backend-api/.env
     volumes:
-      - ./backend-api:/app
+      - .:/app
     working_dir: /app/backend-api # Ensure Celery runs inside backend-api
     environment:
       - PYTHONPATH=/app/backend-api # Add backend-api to PYTHONPATH
@@ -32,13 +36,15 @@ services:
     depends_on:
       - redis
       - web
+    networks:
+      - backend_network
 
   celery-beat:
     build: .
     env_file:
       - backend-api/.env
     volumes:
-      - ./backend-api:/app
+      - .:/app
     working_dir: /app/backend-api # Ensure Celery runs inside backend-api
     environment:
       - PYTHONPATH=/app/backend-api # Add backend-api to PYTHONPATH
@@ -46,3 +52,9 @@ services:
     depends_on:
       - redis
       - web
+    networks:
+      - backend_network
+
+networks:
+  backend_network:
+    driver: bridge
